src/test/deca/context/valid/avecObjet/call_method_return_float_used.deca
// Description :
//    Appel d'une méthode retournant un float.
//
// Resultats :
//    OK

class A {
    float get() {
        return 4.5;
    }
}

{
    A a = new A();
    println(a.get());
}

