src/test/deca/context/invalid/inheritance/base_ref_calls_unknown_method.deca
// Description :
//    Appel d'une méthode inexistante via une référence de type parent.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
}

class B extends A {
    void f() {
    }
}

{
    A a = new B();
    a.f();
}

